--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,20 @@ input[type=text] {
 @media only screen and (max-width: 500px) {
 	#wrapper {
 		width: 100%;
-		height: initial;
+		height: 96.4vh;
+	}
+
+	.fill-display {
+		height: 20vh;
+	}
+
+	.fill-btn {
+		height: 15.2vh;
+	}
+
+	.btn {
+		height: -webkit-fill-available;
+		height: -o-fill-available;
+		height: -moz-fill-available;
 	}
 }
